<?xml version="1.0"?>
<package format="2">
  <name>thinkgear_bridge</name>
  <version>0.0.0</version>
  <description>NeuroSky TGAM1 ASIC-EEG bridge package</description>
  <maintainer email="marton@vulcan-logic.org">nilseuropa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
